--- a/web-server/public/about.html
+++ b/web-server/public/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
+		<link rel="stylesheet" href="./css/style.css">
+		<script src="./js/app.js"></script> 
 	</head>
 	<body>
 		<h1>
 			About
 		</h1>
+		<img src="img/0.jpeg">
 	</body>
 </html>
